unsafe usage in xsodata because of olingo