@@ -1,14 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-      <groupId>com.codbex.kronos</groupId>
-      <artifactId>codbex-kronos-parent</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
-  </parent>
+	<parent>
+		<groupId>com.codbex.kronos</groupId>
+		<artifactId>codbex-kronos-parent</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
 	<name>codbex - kronos - application</name>
 	<artifactId>codbex-kronos-application</artifactId>
@@ -18,10 +16,10 @@
 	<dependencies>
 
 		<dependency>
-      <groupId>com.codbex.kronos</groupId>
-      <artifactId>codbex-kronos-branding</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
+			<groupId>com.codbex.kronos</groupId>
+			<artifactId>codbex-kronos-branding</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Core -->
 		<dependency>
@@ -36,7 +34,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Security -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -48,7 +46,7 @@
 			<artifactId>dirigible-components-security-keycloak</artifactId>
 			<version>${dirigible.version}</version>
 		</dependency>
-		
+
 		<!-- Data -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -56,7 +54,7 @@
 			<version>${dirigible.version}</version>
 			<type>pom</type>
 		</dependency>
-		
+
 		<!-- Engine -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -64,7 +62,7 @@
 			<version>${dirigible.version}</version>
 			<type>pom</type>
 		</dependency>
-		
+
 		<!-- IDE -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -78,7 +76,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- API -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -86,7 +84,7 @@
 			<version>${dirigible.version}</version>
 			<type>pom</type>
 		</dependency>
-		
+
 		<!-- Resources -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -94,7 +92,7 @@
 			<version>${dirigible.version}</version>
 			<type>pom</type>
 		</dependency>
-		
+
 		<!-- Templates -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -102,16 +100,16 @@
 			<version>${dirigible.version}</version>
 			<type>pom</type>
 		</dependency>
-		
+
 		<!-- Kronos -->
-		
+
 		<!-- API -->
 		<dependency>
 			<groupId>com.codbex.kronos</groupId>
 			<artifactId>codbex-kronos-components-api-xsjs</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!-- Engines -->
 		<dependency>
 			<groupId>com.codbex.kronos</groupId>
@@ -148,7 +146,7 @@
 			<artifactId>codbex-kronos-components-engine-xsjob</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!--
 		<dependency>
 			<groupId>com.codbex.kronos</groupId>
@@ -168,7 +166,7 @@
 		</dependency>
 		
 		-->
-		
+
 		<!--
 		
 		<dependency>
@@ -177,7 +175,7 @@
 			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 		-->
-		
+
 		<!-- IDE -->
 		<dependency>
 			<groupId>com.codbex.kronos</groupId>
@@ -196,18 +194,18 @@
 			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 		-->
-    <!-- Dialects -->
-    <dependency>
-      <groupId>org.eclipse.dirigible</groupId>
-      <artifactId>dirigible-database-sql-postgres</artifactId>
-      <version>${dirigible.version}</version>
-    </dependency>
+		<!-- Dialects -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-sql-postgres</artifactId>
+			<version>${dirigible.version}</version>
+		</dependency>
 
-    <dependency>
-      <groupId>org.eclipse.dirigible</groupId>
-      <artifactId>dirigible-database-sql-hana</artifactId>
-      <version>${dirigible.version}</version>
-    </dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-sql-hana</artifactId>
+			<version>${dirigible.version}</version>
+		</dependency>
 
 	</dependencies>
 
@@ -220,6 +218,10 @@
 				<version>${spring.boot.version}</version>
 				<configuration>
 					<mainClass>com.codbex.kronos.KronosApplication</mainClass>
+					<jvmArguments>
+						<argument>--add-opens java.base/java.lang=ALL-UNNAMED</argument>
+						<argument>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</argument>
+					</jvmArguments>
 				</configuration>
 				<executions>
 					<execution>
@@ -228,6 +230,18 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.plugin.version}</version>
+				<configuration>
+					<argLine>
+              @{argLine}
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          </argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 		<resources>
@@ -238,8 +252,8 @@
 		</resources>
 	</build>
 
-    <properties>
-        <license.header.location>../licensing-header.txt</license.header.location>
-    </properties>
+	<properties>
+		<license.header.location>../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
